--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,6 +9,7 @@
   padding-bottom: 2rem;
   background-color: var(--backgroundColor);
   opacity: .8;
+  top:0;
 }
 #header::before {
   content: "";
