--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,10 +1,10 @@
 #home {
   display: flex;
-  /* flex: 1; */
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100vw;
+  height: 100vh;
 }
 .hero-el {
   display: flex;
@@ -12,6 +12,7 @@
   flex: 1;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 }
 .hero-el-row {
   display: flex;
