--- a/src/components/aboutMeAnimated/AboutMeAnimated.css
+++ b/src/components/aboutMeAnimated/AboutMeAnimated.css
@@ -3,8 +3,11 @@
   flex: 1;
   flex-direction: row;
   width: 100vw;
+  height: 100vh;
   align-items: center;
   justify-content: center;
+  position: relative;
+  /* margin-bottom: 500px; */
 }
 .about-me-anim-col-left {
   display: flex;
@@ -56,7 +59,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0.1;
+  opacity: 0.3;
   z-index: -9999;
 }
 @keyframes float {
