--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   width: 100vw;
   height: 100vh;
+  margin-bottom: 500px;
 }
 .hero-el {
   display: flex;
@@ -12,7 +13,6 @@
   flex: 1;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
 }
 .hero-el-row {
   display: flex;
@@ -91,7 +91,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0.1;
+  opacity: 0.3;
   z-index: -9999;
 }
 .syntax-high {
