--- a/src/components/aboutMeAnimated/AboutMeAnimated.css
+++ b/src/components/aboutMeAnimated/AboutMeAnimated.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  /* margin-bottom: 500px; */
+  margin-top: 150px;
 }
 .about-me-anim-col-left {
   display: flex;
@@ -27,15 +27,13 @@
   font-family: "Slackey", sans-serif;
   font-size: 40px;
   font-weight: bold;
-  color: #5e50f8;
-  filter: drop-shadow(0 0 25px #5e50f8);
+  color: var(--textColor);
   border-radius: 8px;
 }
 .about-anim-icon {
   width: 50px;
   height: 50px;
-  color: #cb2424;
-  filter: drop-shadow(0 0 25px #cb2424);
+  color: var(--textColor);
 }
 .about-me-anim-para {
   font-family: "Slackey", sans-serif;
@@ -59,7 +57,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0.3;
+  opacity: 0.1;
   z-index: -9999;
 }
 @keyframes float {
