--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -5,7 +5,6 @@
   justify-content: flex-start;
   width: 100vw;
   height: 100vh;
-  margin-bottom: 500px;
 }
 .hero-el {
   display: flex;
@@ -86,7 +85,7 @@
 }
 .img-rafael-background {
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: auto;
   top: 50%;
   left: 50%;
