--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -7,36 +7,25 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  /* margin-bottom: 500px; */
+  margin-top: 150px;
 }
 .projects-headline {
   display: flex;
   align-items: center;
   justify-content: space-around;
   width: 900px;
-  /* background-color: red; */
 }
 .projects-title {
   font-family: "Slackey", sans-serif;
   font-size: 50px;
   font-weight: bold;
-  color: #5e50f8;
-  filter: drop-shadow(0 0 25px #5e50f8);
+  color: var(--textColor);
   border-radius: 8px;
 }
 .projects-icon {
   width: 60px;
   height: 60px;
-  color: #cb2424;
-  filter: drop-shadow(0 0 25px #cb2424);
-}
-.f-1 {
-  flex: 1;
-}
-.f-5 {
-  display: flex;
-  justify-content: center;
-  flex: 5;
+  color: var(--textColor);
 }
 .img-proj-background {
   position: absolute;
@@ -48,35 +37,6 @@
   opacity: 0.3;
   z-index: -9999;
 }
-@keyframes float {
-  0%,
-  100% {
-    transform: translateY(-20px);
-  }
-  50% {
-    transform: translateY(20px);
-  }
-}
-.float-anim {
-  animation: float 5s ease-in-out infinite;
-  animation-timing-function: ease-in-out;
-}
-.anim-img {
-  width: clamp(180px, 300px, 480px);
-  height: clamp(180px, 300px, 480px);
-  margin: 1rem;
-  border-radius: 5%;
-  border: 1px solid grey;
-  transition: transform 1s ease-in-out;
-}
-.anim-img:hover {
-  transform: scale(1.5);
-}
-@media (max-width: 799px) {
-  .float-anim {
-    display: none;
-  }
-}
 @media (max-width: 399px) {
   .projects-title {
     font-size: 32px;
@@ -84,5 +44,10 @@
   .projects-icon {
     width: 35px;
     height: 35px;
+  }
+}
+@media(max-width: 799px) {
+  .projects-headline {
+    width: 100%;
   }
 }
